# harness

./: .context-handoff.md  .gitignore  CLAUDE.md  CLIENT_SETUP.md  HARNESS.md  PROTOCOL.md  RELEASE_NOTES.md  agent.py  config.py  harness  harness_app.py  harness_server.py  main.py  profile.py  pyproject.toml  run.sh
.planning/: BB-2-DESIGN.md  CLIENT-TOOLS-DESIGN.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  UI-RENDER-PLAN.md
cli/: __init__.py  app.py  callbacks.py  claude.py  intent.py  render.py  setup.py  slash.py  tui.py
context/: __init__.py  indexer.py  retriever.py
evolution/: __init__.py  engine.py  executor.py  history.py  idle_runner.py  install_daemon.sh  proposer.py  scorer.py  tracker.py
harness_core/: __init__.py  handlers.py  router.py  types.py
session/: __init__.py  analyzer.py  compactor.py  logger.py  store.py
skills/: __init__.py  korean-public-site.md  scss-bem.md  vue-accessibility.md
tests/: conftest.py  test_agent_client_side_dispatch.py  test_agent_parse.py  test_agent_retry.py  test_agent_thinking.py  test_compactor.py  test_config.py  test_external_ai.py  test_fs.py  test_handle_slash.py  test_harness_core.py  test_harness_server.py  test_hooks.py  test_main_intent.py  test_profile.py  test_rpc_bridge.py  test_shell.py  test_tools_registry.py  test_tui.py  test_web_ssrf.py
tools/: __init__.py  claude_cli.py  external_ai.py  fs.py  git.py  hooks.py  improve.py  mcp.py  shell.py  web.py
ui/: index.js  package.json  (+1 more)
ui-ink/: .gitignore  README.md  eslint.config.js  harness.sh  package.json  tsconfig.json
(+180 files in other folders)
