[project]
name = "harness"
version = "0.1.0"
description = "Ollama 로컬 모델 기반 터미널 에이전트"
requires-python = ">=3.11"
dependencies = [
  "rich>=15.0",
  "prompt_toolkit>=3.0",
  "websockets>=16.0",
  "textual>=8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
filterwarnings = [
  "ignore::DeprecationWarning",
]
