[project]
name = "harness"
version = "0.1.0"
description = "Ollama 로컬 모델 기반 터미널 에이전트"
requires-python = ">=3.11"
dependencies = [
  "rich>=15.0",
  "prompt_toolkit>=3.0",
  # CONCERNS.md §1.2: handler(ws) 단일 인자 API는 websockets 13+ (신규 async API).
  # 상한 <18로 고정해 향후 breaking 변경(path 인자 재도입 등) 즉시 감지.
  "websockets>=16.0,<18",
  "textual>=8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
filterwarnings = [
  "ignore::DeprecationWarning",
]
